--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
               <div class="col-lg-6">
                 <ul>
                 
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span> <a href="www.sentkrish.com">sentkrish.com</a></span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span> <a href="https://www.sentkrish.com">sentkrish.com</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1 437 770 7531</span></li>
                   
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>sentkrish03@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:sentkrish03@gmail.com">sentkrish03@gmail.com</a></span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li> -->
                 </ul>
               </div>
