--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Sumary</h3>
-            <div class="resume-item pb-0">
+            <div class="resume-item pb-0 text-justify">
               <h4>Senthilkumar Krishnan</h4>
               <p><em>Over 12+ years of experience in supporting and implementing Oracle JD Edwards EnterpriseOne with good technical
                   experience and customization of various client/server applications as a Technical consultant</em></p>
