--- a/index.html
+++ b/index.html
@@ -716,13 +716,16 @@ Sincerity, perseverance, excellent communication, dedication to work, along with
     <div class="container">
       <div class="copyright">
         &copy; Copyright <strong><span>sentkrish.com</span></strong>
+       
       </div>
+     
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
         <!-- Designed by <a href="http://www.sentkrish.com/">Senthilkumar</a> -->
+        <span><a href="privacy.html">Privacy Policy</a></span>
       </div>
     </div>
   </footer><!-- End  Footer -->
